# PersonalBook

./: README.md
api/: pyproject.toml
api/src/api/: cli.py  constants.py  functions.py  launcher.py
api/src/api/contract/: book.py  document.py  library.py  search.py  user.py
api/src/api/routes/: __init__.py  books.py  libraries.py  users.py
api/src/api/services/: book.py  factory.py  library.py  user.py
api/src/api/services/mixins/: __init__.py  create.py  crud.py  delete.py  read.py  update.py
api/src/api/settings/: __init__.py  settings.py
docker/api/: Dockerfile
