[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sam Maphey <sammaphey@gmail.com>"]
readme = "../README.md"

packages = [
    {include = "api", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
httpx = "^0.27.0"
loguru = "^0.7.2"
pydantic-settings = "^2.3.4"
pymongo = {extras = ["srv"], version = "^4.8.0"}

[tool.poetry.scripts]
api = "api.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
